# coffee_online

./: .env  .gitignore  .pre-commit-config.yaml  .pre-commit.config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
scripts/: lint.sh  static-analysis.sh
src/coffee_online/application/contracts/orders/: requests.py  responses.py
src/coffee_online/application/contracts/profiles/: requests.py  responses.py
src/coffee_online/application/contracts/users/: requests.py  responses.py
src/coffee_online/application/usecases/: create_order.py  create_profile.py  get_user_by_id.py
src/coffee_online/domain/common/: errors.py  value_object.py
src/coffee_online/domain/entities/: additive.py  address.py  coffee.py  order.py  profile.py  user.py
src/coffee_online/domain/repositories/: order.py  profile.py  user.py
src/coffee_online/domain/value_objects/: additive_id.py  additive_title.py  address_id.py  address_title.py  after_time.py  coffee_cost.py  coffee_description.py  coffee_id.py  coffee_title.py  order_id.py  order_volume.py  profile_id.py  profile_name.py  profile_sex.py  user_email.py  user_hashed_password.py  user_id.py  user_name.py  user_sex.py
src/coffee_online/entrypoint/: web_api.py
src/coffee_online/infrastructure/: config.py
src/coffee_online/infrastructure/auth/: manager.py
src/coffee_online/infrastructure/di/: main.py
src/coffee_online/infrastructure/di/providers/: adapters.py  usecases.py
src/coffee_online/infrastructure/persistence/migrations/: env.py
src/coffee_online/infrastructure/persistence/migrations/versions/: 0ba6edf99249_user.py  313fds321f_profile_user.py  b8b366dc6bb1_user_model.py  cabc21d9b237_init.py
src/coffee_online/infrastructure/persistence/models/: profile.py  user.py
src/coffee_online/infrastructure/persistence/models/types/: created_at.py  updated_at.py
src/coffee_online/infrastructure/persistence/repositories/: profiles.py  users.py
src/coffee_online/infrastructure/persistence/repositories/mappers/: user_mapper.py
src/coffee_online/presentation/web_api/: exc_handlers.py
src/coffee_online/presentation/web_api/routers/: profile_router.py  user_router.py
src/coffee_online/presentation/web_api/schemas/: profiles.py
src/domain/common/: entity.py  errors.py  value_object.py
src/domain/entities/: user.py
src/domain/repositories/: user.py
src/domain/value_objects/: user_email.py  user_hashed_password.py  user_id.py  user_name.py  user_sex.py
