[project]
name = "coffee-online"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "async-sqlalchemy>=1.0.0",
    "asyncpg>=0.30.0",
    "dishka>=1.4.0",
    "fastapi-users[sqlalchemy]>=13.0.0",
    "fastapi[standard]>=0.115.3",
    "greenlet>=3.1.1",
    "gunicorn>=23.0.0",
    "pre-commit>=4.0.1",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
]

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "ruff>=0.7.1",
]

[tool.mypy]
files = ["src"]
strict = true
python_version = "3.12"
ignore_missing_imports = true
install_types = true
non_interactive = true
plugins = ["pydantic.mypy"]

# from https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = false


[tool.ruff]
line-length = 79
src = ["src"]
